# py-hidreport

./: .gitignore  LICENSE  README.md  build-pip-local.bat  build-pip-venv.bat  install-dev.bat  prebuild.bat  pyproject.toml  upload.bat  version.bat  version.env  打包说明.md
examples/: ctx01.py  parser01.py  parser02.py
install-dev/: pyproject.toml
src/py_hidreport/: Items.py  ctx.py  hidusage.py  items.py  parser.py  reportdesc.py  usages.py
src/py_hidreport/examples/: parser02.py
src/py_hidreport/items/: __Items.py  __init__.py
src/py_hidreport/pages/: ArcadePage.py  AuxiliaryDisplayPage.py  BarcodeScannerPage.py  BatterySystemPage.py  BrailleDisplayPage.py  ButtonPage.py  CameraControlPage.py  ConsumerPage.py  DigitizersPage.py  EyeandHeadTrackersPage.py  FIDOAlliancePage.py  GameControlsPage.py  GamingDevicePage.py  GenericDesktopPage.py  GenericDeviceControlsPage.py  HapticsPage.py  KeyboardPage.py  LEDPage.py  LightingAndIlluminationPage.py  MagneticStripeReaderPage.py  MedicalInstrumentPage.py  MonitorEnumeratedPage.py  MonitorPage.py  OrdinalPage.py  PhysicalInputDevicePage.py  PowerPage.py  ScalesPage.py  SensorsPage.py  SimulationControlsPage.py  SoCPage.py  SportControlsPage.py  TelephonyDevicePage.py  UnicodePage.py  VESAVirtualControlsPage.py  VRControlsPage.py  VendordefinedPage.py  __init__.py
src/py_hidreport/usages/: ArcadePage.py  AuxiliaryDisplayPage.py  BarcodeScannerPage.py  BatterySystemPage.py  BrailleDisplayPage.py  ButtonPage.py  CameraControlPage.py  ConsumerPage.py  DigitizersPage.py  EyeandHeadTrackersPage.py  FIDOAlliancePage.py  GameControlsPage.py  GenericDesktopPage.py  GenericDeviceControlsPage.py  HapticsPage.py  KeyboardPage.py  LEDPage.py  LightingAndIlluminationPage.py  MagneticStripeReaderPage.py  (+15 more)
(+3 files in other folders)
