[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_hidreport"
keywords = ["hid", "report-desc", "usb"]
dynamic = ["version"]
authors = [{ name = "ThankVinci", email = "thankvinci@163.com" }]
description = "a realization of report descriptor parser and codec context."
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = []

[tool.setuptools.packages]
find = { where = ["./src"] } 