[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_hidreport"
version = "0.0.2.dev1"
authors = [{ name = "ThankVinci", email = "thankvinci@163.com" }]
description = "a realization of report description coder."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.distutils.bdist_wheel]
python-tag = "py38"

[project.optional-dependencies]
dev = []

[tool.setuptools.packages]
find = { where = ["../src"] } 